@@ -37,6 +37,14 @@ you must specify exactly one condition.</p>
       &quot;true&quot;.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">else</td>
+    <td valign="top">The value to set the property to if the condition
+      evaluates to <i>false</i>. By default the property will remain unset.
+      <em>Since Ant 1.6.3</em>
+    </td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3><a name="nested">Parameters specified as nested elements</a></h3>
 <p>All conditions to test are specified as nested elements, for a
@@ -81,7 +89,7 @@ in the Unix family as well.</p>
 operating system is SunOS and if it is running on a sparc architecture.</p>
 
 <hr>
-<p align="center">Copyright &copy; 2001-2002,2004 The Apache Software
+<p align="center">Copyright &copy; 2001-2002, 2004-2005 Apache Software
 Foundation. All rights Reserved.</p>
 
 </body>
