@@ -1,5 +1,5 @@
 /*
- * Copyright  2002,2004 The Apache Software Foundation
+ * Copyright  2002, 2004-2005 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -226,5 +226,8 @@ public class ConditionTest extends BuildFileTest {
                     "Nothing to test for falsehood");
     }
 
+    public void testElse() {
+        executeTarget("testElse");
+    }
 }
 
