@@ -107,6 +107,10 @@ Other changes:
 * Added verbose="true|false" attribute to <subant>. When verbose is enabled,
   the directory name is logged on entry and exit of the sub-build. Bugzilla 33787.
 
+* Add else attribute to the condition task, which specifies an
+  optional alternate value to set the property to if the nested
+  condition evaluates to false. Bugzilla report 33074.
+
 Fixed bugs:
 -----------
 
